# redteam4RAG-cli

./: .env.example  .gitignore  .redteam4rag.yaml  RAG-Attacks_DB.md  README.md  RedTeam4RAG.md  TODO.md  implementation-plan.md  pyproject.toml  system-design.md
redteam4rag/: models.py
redteam4rag/adapters/: base.py  http.py
redteam4rag/attack_configs/: full.yaml  pii-focused.yaml  quick.yaml  retriever-only.yaml
redteam4rag/attacks/: registry.py
redteam4rag/attacks/context/: conflicting_chunk_injection.py  context_stuffing.py  distractor_document.py  long_context_dilution.py  position_bias_probe.py
redteam4rag/attacks/data_leakage/: cross_user_isolation.py  membership_inference.py  pii_exfiltration.py  verbatim_extraction.py
redteam4rag/cli/: corpus.py  main.py  plugin.py  report.py  scan.py
redteam4rag/conversation/: base.py  static.py
redteam4rag/core/: attack_config_loader.py  config.py
redteam4rag/engine/: mutation.py  orchestrator.py  state.py
redteam4rag/generators/: base.py  llm.py  static.py
redteam4rag/judges/: __init__.py  base.py  compound.py  llm.py  regex.py  registry.py
redteam4rag/providers/: __init__.py  anthropic.py  base.py  openai.py
redteam4rag/templates/: report.html.j2  report.md.j2
test_rag/: server.py
tests/: conftest.py
tests/e2e/: test_e2e_scan.py
tests/integration/: test_orchestrator.py
tests/unit/: test_attack_config_loader.py  test_cli.py  test_config.py  test_conversation.py  test_generators.py  test_http_adapter.py  test_judges.py  test_models.py  test_providers.py  test_registry.py  test_reports.py
(+20 files in other folders)
