[project]
name = "redteam4rag"
version = "1.0.0"
description = "Automated red-teaming CLI for RAG (Retrieval-Augmented Generation) systems"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.28",
    "httpx>=0.27",
    "jinja2>=3.1",
    "rich>=13.7",
    "typer[all]>=0.12",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
    "langgraph>=0.1.0",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]

[project.scripts]
redteam4rag = "redteam4rag.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
